# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: analyzer.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: all.html  edit_page.html  index.html
