[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergeeva Larisa <mindzu@mail.ru>"]
readme = "README.md"
packages = [
    {include = "page_analyzer"}
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"
flask = "^3.0.3"
dotenv = "^1.0.1"
requests = "^2.32.3"
validators = "^0.28.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
